Closed Bug 423578 Opened 18 years ago Closed 17 years ago

Cancelling a search in the Bookmarks Manager resets open folders

Categories

(Camino Graveyard :: Bookmarks, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: alqahira, Assigned: alqahira)

Details

Attachments

(1 file)

I feel like this is a dupe, but I can't find it right now, so filing.... Chris probably knows which one it is, if it is filed already. Cancelling/clearing any search in the Bookmarks Manager (bookmarks or history) clears the expanded folder state for the searched collection. STR: 1) Have one or more folders expanded in any folder-capable Manager collection 2) Type something the search field 3) Cmd-., Esc, delete all the way, or click the (x) button in the field AR: No folders expanded ER: Folders expanded prior to searching are expanded at the end of the search (Technically, just the act of entering a character is what kills folder state, since delete also doesn't restore.)
On the other hand, searching and then double-clicking on the result (thus leaving the Manager) *does* manage to preserve open folder state.
Attached patch fixSplinter Review
This annoyed me one too many times tonight, and mxr was very nice to me, so herewith another of my awesome couple-line Obj-C fixes.
Assignee: nobody → alqahira
Status: NEW → ASSIGNED
Attachment #345438 - Flags: review?(cl-bugs-new)
Comment on attachment 345438 [details] [diff] [review] fix Looks good, works as advertised, and is going to rot me on 338558. Great. :-p
Attachment #345438 - Flags: superreview?(mikepinkerton)
Attachment #345438 - Flags: review?(cl-bugs-new)
Attachment #345438 - Flags: review+
Attachment #345438 - Flags: superreview?(mikepinkerton) → superreview+
Landed on cvs trunk!
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: