Bug 423578 - Cancelling a search in the Bookmarks Manager resets open folders. r=cl, sr=pink